# clipppy

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codecov_workflow.yml
docs/: docs_requirements.txt
docs/source/: conf.py  devguide.md  examples.rst  index.rst  userguide.rst
docs/source/_autoapi_templates/python/: module.rst
docs/source/_static/: style.css
docs/source/examples/: answer.yaml  clipppy.ipynb  hello_yaml.ipynb  stochastic.ipynb
docs/source/userguide/yaml/: basic.rst  signature.rst  tags.rst  templating.rst  yaml.rst
examples/: example.ipynb  lensing.yaml  linear.yaml  linear_data.pt  minimal.py  models.py  spectrum.npz  spectrum.yaml
examples/_old/: linear.yaml  minimal.py  quadratic.yaml
examples/_old/cpsampling/: mockelt-mask.npy
examples/cpsampling/: mockelt-guide-gp.pt  mockelt-obs.npy  mockelt.yaml  sampling.ipynb
src/clipppy/: Clipppy.py  __init__.py  __init__.pyi  _clipppy.py  autocli.py  cli.py  clipppy.py  commandable.py  contrib.py  globals.py  guide.py  helpers.py  stochastic.py  templating.py  yaml.py
src/clipppy/cli/: __init__.py
src/clipppy/commands/: Command.py  Commandable.py  Fit.py  PPD.py  __init__.py  callbacks.py  command.py  commandable.py  emcee.py  fit.py  mock.py  optimizing_command.py  ppd.py  sampling_command.py
src/clipppy/commands/lightning/: _zarr_data.py  callbacks.py  command.py  data.py  hyper.py  loss.py  npe.py  nre.py  patches.py
src/clipppy/commands/npe/: _typing.py  nn.py
src/clipppy/commands/nre/: NRE.py  __init__.py  _typing.py  data.py  loss.py  nn.py  validate.py
src/clipppy/commands/sbi/: _typing.py  data.py  nn.py
src/clipppy/distributions/: __init__.py  concrete.py  constrained.py  conundis.py  event_masked.py  extra_delta.py  extra_dimensions.py  histdist.py  ubsample.py  utils.py  wrapper.py
src/clipppy/distributions/conundis/: __init__.py  concrete.py  constraining_messenger.py  conundis_mixin.py
src/clipppy/distributions/simplex/: __init__.py  contours.py  simplifying_messenger.py  utils.py
src/clipppy/guide/: __init__.py  group_spec.py  guide.py  sampling_group.py  sampling_groups.py
src/clipppy/guide/sampling_groups/: __init__.py  delta.py  diagonal_normal.py  hpmvn.py  mvn.py  pmvn.py
src/clipppy/patches/: __init__.py  torch_numpy.py  warnings.py
src/clipppy/sbi/: _typing.py  data.py  multi.py  nn.py  zarr_data.py
src/clipppy/stochastic/: __init__.py  capsule.py  infinite.py  sampler.py  stochastic.py  wrapper.py
src/clipppy/utils/: __init__.py  importing.py  nn.py  pyro.py  signatures.py  trace.py  typing.py
src/clipppy/utils/nn/: attrs.py  (+7 more)
src/clipppy/yaml/: __init__.py  constructor.py  hooks.py  jinja.py  prefixed.py  py.py  resolver.py  scope.py  tagger.py  templating.py
tests/: test_patches.py  test_pickle.py  test_samplers.py  test_stochastic.py  test_yaml.py
tests/distributions/: test_conundis.py
tests/guide/: _guide_utils.py  test_guide_basic.py  test_guide_sampling.py
tests/guide/sampling_groups/: test_pmvn.py  test_sampling_groups.py
tests/res/: data.npy  data.npz  data.pt
tests/stochastic/: test_capsule.py  test_samplers.py  test_stochastic.py
tests/utils/: test_anyregex.py
tests/yaml/: test_other_tags.py  test_stochastic_yaml.py  test_type_hints.py  test_yaml.py
tests/yaml/res/: basic.yaml  config.yaml  trace.pt
(+24 files in other folders)
