[metadata]
name = clipppy
version = attr: clipppy.__version__
description = Convenience Layer for Inference and Probabilistic Programming in Python
author = Kosio Karchev
author_email = kosioakarchev@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/kosiokarchev/clipppy

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    frozendict
    more-itertools
    ruamel.yaml
    pyro-ppl

[options.packages.find]
where = src
include = clipppy

[options.extras_require]
testing =

[tool:pytest]
testpaths = tests
