[metadata]
name = clipppy
version = attr: clipppy.__version__
description = Convenience Layer for Inference and Probabilistic Programming in Python
author = Kosio Karchev
author_email = kosioakarchev@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/kosiokarchev/clipppy

license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    Typing :: Typed

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    frozendict
    more-itertools
    typing-extensions
    ruamel.yaml
    python-forge
    pyro-ppl
    torch>=1.11

[options.packages.find]
where = src
include = clipppy

[options.extras_require]
docs =
    sphinx-autoapi

testing =
    pytest
    hypothesis

jinja =
    jinja

lightning =
    pytorch_lightning
    torchdata
    zarr

emcee =
    emcee

[tool:pytest]
testpaths = tests
